--- a/client/src/components/TopBar/TopBar.css
+++ b/client/src/components/TopBar/TopBar.css
@@ -1,13 +1,13 @@
 .top {
-  background-color: rgb(255, 255, 255);
   width: 100%;
   height: 50px;
+  background-color: white;
   position: sticky;
   top: 0;
   display: flex;
   align-items: center;
-  z-index: 999;
   font-family: "Josefin Sans", sans-serif;
+  z-index: 999;
 }
 
 .topLeft,
@@ -29,6 +29,14 @@
   cursor: pointer;
 }
 
+.topImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
 .topList {
   display: flex;
   justify-content: center;
@@ -44,21 +52,9 @@
   cursor: pointer;
 }
 
-.topListItem:hover {
-  color: gray;
-}
-
-.topImg {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-right: 15px;
-  cursor: pointer;
-}
-
 .topSearchIcon {
   font-size: 18px;
   color: #666;
   cursor: pointer;
+  margin-left: 15px;
 }
