--- a/client/src/components/TopBar/TopBar.css
+++ b/client/src/components/TopBar/TopBar.css
@@ -8,6 +8,7 @@
   align-items: center;
   font-family: "Josefin Sans", sans-serif;
   z-index: 999;
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
 }
 
 .topLeft,
