--- a/client/src/pages/Register/Register.css
+++ b/client/src/pages/Register/Register.css
@@ -4,16 +4,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(
+  /* background: linear-gradient(
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
     url("https://images.pexels.com/photos/317355/pexels-photo-317355.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-  background-size: cover;
+  background-size: cover; */
 }
 
 .registerTitle {
-  font-size: 50px;
+  font-size: 3rem;
+  padding: 0.5rem;
+  font-family: "Josefin Sans", sans-serif;
+  border-bottom: solid 1px #7d7b7b;
+  color: #be9656;
 }
 
 .registerForm {
@@ -24,13 +28,17 @@
 
 .registerForm > label {
   margin: 10px 0;
+  font-weight: 600;
+  font-family: monospace;
+  font-size: 1rem;
 }
 
 .registerInput {
   padding: 10px;
   background-color: white;
   border: none;
-  border-radius: 10px;
+  border-radius: 1rem;
+  border: solid 1px #b0acac;
 }
 
 .registerInput:focus {
@@ -40,7 +48,7 @@
 .registerButton {
   margin-top: 20px;
   cursor: pointer;
-  background-color: teal;
+  background-color: #d7b277;
   color: white;
   padding: 10px;
   border: none;
@@ -52,9 +60,9 @@
   position: absolute;
   top: 60px;
   right: 20px;
-  background-color: lightcoral;
+  background-color: #d7b277;
   cursor: pointer;
-  padding: 10px;
+  padding: 0.5rem 1rem;
   border: none;
   color: white;
   border-radius: 10px;
