--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -4,16 +4,31 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(
+  /* background: linear-gradient(
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
     url("https://images.pexels.com/photos/768473/pexels-photo-768473.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
-  background-size: cover;
+  background-size: cover; */
 }
 
+/* 
+    font-family: 'Josefin Sans', sans-serif;
+
+    font-family: 'Lora', serif;
+
+    font-family: 'Varela', sans-serif;
+
+    font-family: 'Varela Round', sans-serif;
+
+*/
+
 .loginTitle {
-  font-size: 50px;
+  font-size: 3rem;
+  padding: 0.5rem;
+  font-family: "Josefin Sans", sans-serif;
+  border-bottom: solid 1px #7d7b7b;
+  /* color: #be9656; */
 }
 
 .loginForm {
@@ -24,13 +39,17 @@
 
 .loginForm > label {
   margin: 10px 0;
+  font-weight: 600;
+  font-family: monospace;
+  font-size: 1rem;
 }
 
 .loginInput {
   padding: 10px;
   background-color: white;
   border: none;
-  border-radius: 10px;
+  border-radius: 1rem;
+  border: solid 1px #b0acac;
 }
 
 .loginInput:focus {
@@ -40,7 +59,7 @@
 .loginButton {
   margin-top: 20px;
   cursor: pointer;
-  background-color: lightcoral;
+  background-color: #444;
   color: white;
   padding: 10px;
   border: none;
